PROJET/obj/y.output
Grammaire

    0 $accept: axiom $end

    1 axiom: statement_list tag '\n'

    2 statement_list: statement_list tag statement
    3               | statement

    4 statement: ID ASSIGN expression
    5          | WHILE tag condition DO tag statement_list tagGoto DONE
    6          | IF condition THEN tag statement_list ENDIF
    7          | IF condition THEN tag statement_list tagGoto ELSE statement_list ENDIF

    8 condition: expression EQUAL expression
    9          | TRUE
   10          | FALSE
   11          | condition OR tag condition
   12          | condition AND tag condition
   13          | NOT condition
   14          | '(' condition ')'

   15 expression: ID
   16           | NUM

   17 tag: %empty

   18 tagGoto: %empty


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'\n' (10) 1
'(' (40) 14
')' (41) 14
error (256)
ASSIGN (258) 4
WHILE (259) 5
DO (260) 5
DONE (261) 5
IF (262) 6 7
THEN (263) 6 7
ELSE (264) 7
ENDIF (265) 6 7
EQUAL (266) 8
TRUE (267) 9
FALSE (268) 10
OR (269) 11
AND (270) 12
NOT (271) 13
ID (272) 4 15
NUM (273) 16


Non-terminaux, suivis des règles où ils apparaissent

$accept (22)
    à gauche: 0
axiom (23)
    à gauche: 1, à droite: 0
statement_list (24)
    à gauche: 2 3, à droite: 1 2 5 6 7
statement (25)
    à gauche: 4 5 6 7, à droite: 2 3
condition (26)
    à gauche: 8 9 10 11 12 13 14, à droite: 5 6 7 11 12 13 14
expression (27)
    à gauche: 15 16, à droite: 4 8
tag (28)
    à gauche: 17, à droite: 1 2 5 6 7 11 12
tagGoto (29)
    à gauche: 18, à droite: 5 7


État 0

    0 $accept: . axiom $end

    WHILE  décalage et aller à l'état 1
    IF     décalage et aller à l'état 2
    ID     décalage et aller à l'état 3

    axiom           aller à l'état 4
    statement_list  aller à l'état 5
    statement       aller à l'état 6


État 1

    5 statement: WHILE . tag condition DO tag statement_list tagGoto DONE

    $défaut  réduction par utilisation de la règle 17 (tag)

    tag  aller à l'état 7


État 2

    6 statement: IF . condition THEN tag statement_list ENDIF
    7          | IF . condition THEN tag statement_list tagGoto ELSE statement_list ENDIF

    TRUE   décalage et aller à l'état 8
    FALSE  décalage et aller à l'état 9
    NOT    décalage et aller à l'état 10
    ID     décalage et aller à l'état 11
    NUM    décalage et aller à l'état 12
    '('    décalage et aller à l'état 13

    condition   aller à l'état 14
    expression  aller à l'état 15


État 3

    4 statement: ID . ASSIGN expression

    ASSIGN  décalage et aller à l'état 16


État 4

    0 $accept: axiom . $end

    $end  décalage et aller à l'état 17


État 5

    1 axiom: statement_list . tag '\n'
    2 statement_list: statement_list . tag statement

    $défaut  réduction par utilisation de la règle 17 (tag)

    tag  aller à l'état 18


État 6

    3 statement_list: statement .

    $défaut  réduction par utilisation de la règle 3 (statement_list)


État 7

    5 statement: WHILE tag . condition DO tag statement_list tagGoto DONE

    TRUE   décalage et aller à l'état 8
    FALSE  décalage et aller à l'état 9
    NOT    décalage et aller à l'état 10
    ID     décalage et aller à l'état 11
    NUM    décalage et aller à l'état 12
    '('    décalage et aller à l'état 13

    condition   aller à l'état 19
    expression  aller à l'état 15


État 8

    9 condition: TRUE .

    $défaut  réduction par utilisation de la règle 9 (condition)


État 9

   10 condition: FALSE .

    $défaut  réduction par utilisation de la règle 10 (condition)


État 10

   13 condition: NOT . condition

    TRUE   décalage et aller à l'état 8
    FALSE  décalage et aller à l'état 9
    NOT    décalage et aller à l'état 10
    ID     décalage et aller à l'état 11
    NUM    décalage et aller à l'état 12
    '('    décalage et aller à l'état 13

    condition   aller à l'état 20
    expression  aller à l'état 15


État 11

   15 expression: ID .

    $défaut  réduction par utilisation de la règle 15 (expression)


État 12

   16 expression: NUM .

    $défaut  réduction par utilisation de la règle 16 (expression)


État 13

   14 condition: '(' . condition ')'

    TRUE   décalage et aller à l'état 8
    FALSE  décalage et aller à l'état 9
    NOT    décalage et aller à l'état 10
    ID     décalage et aller à l'état 11
    NUM    décalage et aller à l'état 12
    '('    décalage et aller à l'état 13

    condition   aller à l'état 21
    expression  aller à l'état 15


État 14

    6 statement: IF condition . THEN tag statement_list ENDIF
    7          | IF condition . THEN tag statement_list tagGoto ELSE statement_list ENDIF
   11 condition: condition . OR tag condition
   12          | condition . AND tag condition

    THEN  décalage et aller à l'état 22
    OR    décalage et aller à l'état 23
    AND   décalage et aller à l'état 24


État 15

    8 condition: expression . EQUAL expression

    EQUAL  décalage et aller à l'état 25


État 16

    4 statement: ID ASSIGN . expression

    ID   décalage et aller à l'état 11
    NUM  décalage et aller à l'état 12

    expression  aller à l'état 26


État 17

    0 $accept: axiom $end .

    $défaut  accepter


État 18

    1 axiom: statement_list tag . '\n'
    2 statement_list: statement_list tag . statement

    WHILE  décalage et aller à l'état 1
    IF     décalage et aller à l'état 2
    ID     décalage et aller à l'état 3
    '\n'   décalage et aller à l'état 27

    statement  aller à l'état 28


État 19

    5 statement: WHILE tag condition . DO tag statement_list tagGoto DONE
   11 condition: condition . OR tag condition
   12          | condition . AND tag condition

    DO   décalage et aller à l'état 29
    OR   décalage et aller à l'état 23
    AND  décalage et aller à l'état 24


État 20

   11 condition: condition . OR tag condition
   12          | condition . AND tag condition
   13          | NOT condition .

    $défaut  réduction par utilisation de la règle 13 (condition)


État 21

   11 condition: condition . OR tag condition
   12          | condition . AND tag condition
   14          | '(' condition . ')'

    OR   décalage et aller à l'état 23
    AND  décalage et aller à l'état 24
    ')'  décalage et aller à l'état 30


État 22

    6 statement: IF condition THEN . tag statement_list ENDIF
    7          | IF condition THEN . tag statement_list tagGoto ELSE statement_list ENDIF

    $défaut  réduction par utilisation de la règle 17 (tag)

    tag  aller à l'état 31


État 23

   11 condition: condition OR . tag condition

    $défaut  réduction par utilisation de la règle 17 (tag)

    tag  aller à l'état 32


État 24

   12 condition: condition AND . tag condition

    $défaut  réduction par utilisation de la règle 17 (tag)

    tag  aller à l'état 33


État 25

    8 condition: expression EQUAL . expression

    ID   décalage et aller à l'état 11
    NUM  décalage et aller à l'état 12

    expression  aller à l'état 34


État 26

    4 statement: ID ASSIGN expression .

    $défaut  réduction par utilisation de la règle 4 (statement)


État 27

    1 axiom: statement_list tag '\n' .

    $défaut  réduction par utilisation de la règle 1 (axiom)


État 28

    2 statement_list: statement_list tag statement .

    $défaut  réduction par utilisation de la règle 2 (statement_list)


État 29

    5 statement: WHILE tag condition DO . tag statement_list tagGoto DONE

    $défaut  réduction par utilisation de la règle 17 (tag)

    tag  aller à l'état 35


État 30

   14 condition: '(' condition ')' .

    $défaut  réduction par utilisation de la règle 14 (condition)


État 31

    6 statement: IF condition THEN tag . statement_list ENDIF
    7          | IF condition THEN tag . statement_list tagGoto ELSE statement_list ENDIF

    WHILE  décalage et aller à l'état 1
    IF     décalage et aller à l'état 2
    ID     décalage et aller à l'état 3

    statement_list  aller à l'état 36
    statement       aller à l'état 6


État 32

   11 condition: condition OR tag . condition

    TRUE   décalage et aller à l'état 8
    FALSE  décalage et aller à l'état 9
    NOT    décalage et aller à l'état 10
    ID     décalage et aller à l'état 11
    NUM    décalage et aller à l'état 12
    '('    décalage et aller à l'état 13

    condition   aller à l'état 37
    expression  aller à l'état 15


État 33

   12 condition: condition AND tag . condition

    TRUE   décalage et aller à l'état 8
    FALSE  décalage et aller à l'état 9
    NOT    décalage et aller à l'état 10
    ID     décalage et aller à l'état 11
    NUM    décalage et aller à l'état 12
    '('    décalage et aller à l'état 13

    condition   aller à l'état 38
    expression  aller à l'état 15


État 34

    8 condition: expression EQUAL expression .

    $défaut  réduction par utilisation de la règle 8 (condition)


État 35

    5 statement: WHILE tag condition DO tag . statement_list tagGoto DONE

    WHILE  décalage et aller à l'état 1
    IF     décalage et aller à l'état 2
    ID     décalage et aller à l'état 3

    statement_list  aller à l'état 39
    statement       aller à l'état 6


État 36

    2 statement_list: statement_list . tag statement
    6 statement: IF condition THEN tag statement_list . ENDIF
    7          | IF condition THEN tag statement_list . tagGoto ELSE statement_list ENDIF

    ENDIF  décalage et aller à l'état 40

    ELSE      réduction par utilisation de la règle 18 (tagGoto)
    $défaut  réduction par utilisation de la règle 17 (tag)

    tag      aller à l'état 41
    tagGoto  aller à l'état 42


État 37

   11 condition: condition . OR tag condition
   11          | condition OR tag condition .
   12          | condition . AND tag condition

    AND  décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 11 (condition)


État 38

   11 condition: condition . OR tag condition
   12          | condition . AND tag condition
   12          | condition AND tag condition .

    $défaut  réduction par utilisation de la règle 12 (condition)


État 39

    2 statement_list: statement_list . tag statement
    5 statement: WHILE tag condition DO tag statement_list . tagGoto DONE

    DONE      réduction par utilisation de la règle 18 (tagGoto)
    $défaut  réduction par utilisation de la règle 17 (tag)

    tag      aller à l'état 41
    tagGoto  aller à l'état 43


État 40

    6 statement: IF condition THEN tag statement_list ENDIF .

    $défaut  réduction par utilisation de la règle 6 (statement)


État 41

    2 statement_list: statement_list tag . statement

    WHILE  décalage et aller à l'état 1
    IF     décalage et aller à l'état 2
    ID     décalage et aller à l'état 3

    statement  aller à l'état 28


État 42

    7 statement: IF condition THEN tag statement_list tagGoto . ELSE statement_list ENDIF

    ELSE  décalage et aller à l'état 44


État 43

    5 statement: WHILE tag condition DO tag statement_list tagGoto . DONE

    DONE  décalage et aller à l'état 45


État 44

    7 statement: IF condition THEN tag statement_list tagGoto ELSE . statement_list ENDIF

    WHILE  décalage et aller à l'état 1
    IF     décalage et aller à l'état 2
    ID     décalage et aller à l'état 3

    statement_list  aller à l'état 46
    statement       aller à l'état 6


État 45

    5 statement: WHILE tag condition DO tag statement_list tagGoto DONE .

    $défaut  réduction par utilisation de la règle 5 (statement)


État 46

    2 statement_list: statement_list . tag statement
    7 statement: IF condition THEN tag statement_list tagGoto ELSE statement_list . ENDIF

    ENDIF  décalage et aller à l'état 47

    $défaut  réduction par utilisation de la règle 17 (tag)

    tag  aller à l'état 41


État 47

    7 statement: IF condition THEN tag statement_list tagGoto ELSE statement_list ENDIF .

    $défaut  réduction par utilisation de la règle 7 (statement)
